changes to many notebooks!

--- a/notebooks/04-fz-merge-metadata-to-esco-crosswalk.ipynb
+++ b/notebooks/04-fz-merge-metadata-to-esco-crosswalk.ipynb
@@ -119,8 +119,7 @@
    "outputs": [],
    "source": [
     "crosswalk = pd.read_csv(\n",
-    "    os.path.join(data_raw, \"onet\", \"onet_esco_crosswalk\", \"processed\",\n",
-    "                 \"ESCO_ONET_xwalk_full.csv\")\n",
+    "    os.path.join(data_raw, \"mcc_data\", \"processed\", \"ESCO_ONET_xwalk_full.csv\")\n",
     ")\n",
     "\n",
     "# decompose isco 4-digit level\n",
