--- a/notebooks/10-fz-network-skills-space.ipynb
+++ b/notebooks/10-fz-network-skills-space.ipynb
@@ -20,18 +20,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
@@ -78,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -107,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -120,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "#adj_matrix = pd.read_pickle(\n",
@@ -136,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -159,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 6,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -186,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "#w_thresh = 0.001\n",
@@ -208,8 +199,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
     "subset = sim_skills.shape[0]\n",
